# pix-scan

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
files/: compile_rc.sh  mainwindow.ui  pix-scan.desktop  resources.qrc
pix_scan/: __init__.py  main.py  mainwindow.py  mainwindow.ui  resources_rc.py  ui_mainwindow.py
